apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.2"

    defaultConfig {
        applicationId "in.rajpusht.pc"
        minSdkVersion 21
        targetSdkVersion 29
        versionCode 2
        versionName "1.0.1"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    dataBinding {
        enabled = true
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

}

dependencies {
    final SUPPORT_LIBRARY_VERSION = '28.0.0-alpha3'
    final ARCHITECTURE_COMPONENT_VERSION = '1.1.1'
    final RETROFIT_VERSION = '2.3.0'
    final DAGGER_VERSION = '2.23.2'
    final LOTTIE_ANDROID_VERSION = '2.5.4'
    final ROOM_VERSION = '2.2.5'
    final rxjava2Version = '2.1.9'
    final rxandroidVersion = '2.0.2'

    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'com.google.android.material:material:1.2.0-alpha02'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta6'

    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.annotation:annotation:1.1.0'
    implementation 'androidx.recyclerview:recyclerview:1.1.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'

    // Retrofit
    implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
    implementation "com.squareup.retrofit2:adapter-rxjava2:$RETROFIT_VERSION"
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
    implementation 'com.squareup.okhttp3:okhttp-urlconnection:3.6.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'


    // RxJava / RxAndroid
    implementation 'io.reactivex.rxjava2:rxjava:2.2.6'
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'

    // Dagger 2
    implementation "com.google.dagger:dagger:$DAGGER_VERSION"
    implementation "com.google.dagger:dagger-android-support:$DAGGER_VERSION"
    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
    annotationProcessor "com.google.dagger:dagger-android-processor:$DAGGER_VERSION"
    androidTestAnnotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"

    // reactive
    implementation "io.reactivex.rxjava2:rxjava:$rxjava2Version"
    implementation "io.reactivex.rxjava2:rxandroid:$rxandroidVersion"

    // Android Architecture Components
    implementation "android.arch.lifecycle:extensions:$ARCHITECTURE_COMPONENT_VERSION"
    implementation "android.arch.lifecycle:common-java8:$ARCHITECTURE_COMPONENT_VERSION"
    implementation "android.arch.lifecycle:reactivestreams:$ARCHITECTURE_COMPONENT_VERSION"

    // database
    implementation "androidx.room:room-rxjava2:$ROOM_VERSION"
    annotationProcessor "androidx.room:room-compiler:$ROOM_VERSION"

    // optional - RxJava support for Room
    implementation "android.arch.persistence.room:rxjava2:$ROOM_VERSION"

    implementation "com.squareup.okhttp3:mockwebserver:3.8.1"

    implementation 'info.hoang8f:android-segmented:1.0.6'

    debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'


    //chart
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'

    implementation "com.hanks:htextview-base:0.1.6"        // base library
    implementation "com.hanks:htextview-evaporate:0.1.6"        // optional

    implementation 'com.github.bumptech.glide:glide:4.11.0'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    //implementation 'com.github.bumptech.glide:glide:4.11.0'
    //annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
    implementation 'com.github.piasy:BigImageViewer:1.6.5'
// load with glide
    implementation 'com.github.piasy:GlideImageLoader:1.6.5'
// progress pie indicator
    implementation 'com.github.piasy:ProgressPieIndicator:1.5.6'




}
